*Empty MediaWiki Message*

--- a/Borz'.mw
+++ b/Borz'.mw
@@ -29,9 +29,9 @@ Zun-Torei-raudtestancii (109 rist. vl 2017) mülüb lidnankundha Borzin ližaks.
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 31 379 ristitud, lidnankundan — 31 496 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 36 700 eläjad vl 1992.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen jumalanpert'<ref>[http://sobory.ru/geo/locat/22326 Borzän pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas vspäi 2014 (saudihe enamba kümned vot).
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen jumalanpert'<ref>[http://sobory.ru/geo/locat/22326 Borzin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas vspäi 2014 (saudihe enamba kümned vot).
 
-Professionaližen opendusen aluzkundad oma medicinine škol (tehnikum)<ref>[http://gouspobmu.ucoz.ru/ Borzän medicinižen školan (tehnikuman) sait (''gouspobmu.ucoz.ru'').] {{ref-ru}}</ref> i Krasnokamenskan tegimištoliž-tehnologižen tehnikuman filial.
+Professionaližen opendusen aluzkundad oma medicinine škol (tehnikum)<ref>[http://gouspobmu.ucoz.ru/ Borzin medicinižen školan (tehnikuman) sait (''gouspobmu.ucoz.ru'').] {{ref-ru}}</ref> i Krasnokamenskan tegimištoliž-tehnologižen tehnikuman filial.
 
 Edeližed lidnan pämehed:
 * Nikolai Jakovlev (sügüz'ku 2016 — heinku 2019);
