--- a/Šilk_(lidn).mw
+++ b/Šilk_(lidn).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Šilkan lidnanznam
  | Flag text = Šilkan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 12,784
- | Voz' = 2017
+ | Eläjiden lugu = 12,339
+ | Voz' = 2021
  | Pind = 105
- | Fail = 
+ | Fail = Памятник в честь шилкинцев, участников В. О. В, самолёт серии "МИГ". Площадь Мира, Шилка, Шилкинский район, Забайкальский край.jpg
  | Pämez' = Sergei Sivolap<br />(keväz'ku 2012—)
  | Telefonkod = +7-30244-xx-xxx
  | Avtokod = 75. 80
@@ -18,17 +18,30 @@
 '''Šilk''' ({{lang-ru|Шилка}} [ˈʂɨlkə]) om [[Venäma]]n lidn da lidnankund [[Baikalantagaine rand|Baikalantagaižen randan]] keskuzpalas. Se om [[Šilkan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud 18. voz'sadan ezmäižel polel [[kozakišt|kozakoiden]] vahtkundaks otmaha kävutamižhe jogen alangišton väghižid maid, nimitihe jogen mödhe. Ezmäižen kerdan lidn mainitase kirjutadud purtkiš vl 1765. Vspäi 1914 [[Transsib]]an stancii radab Šilkas. Se sai lidnan statusad vl 1951. Lidn šingotase raudten edheotandoil.
+Eländpunktan aluz om pandud 18. voz'sadan ezmäižel polel [[kozakišt|kozakoiden]] vahtkundaks otmaha kävutamižhe jogen alangišton väghižid maid, nimitihe jogen mödhe. Ezmäižen kerdan lidn mainitase kirjutadud purtkiš vl 1765. Vspäi 1914 [[Transsib]]an stancii radab Šilkas. Se sai lidnan statusad vl 1951.
+
+Šilk šingotase raudten edheotandoil.
 
 == Geografijan andmused ==
 Lidn sijadase [[Šilk (jogi)|Šilk-jogen]] hural randpolel ([[Amur]]an bassein), 2 kilometras jogespäi, 490 m ü.m.t. keskmäižel korktusel. Matkad [[Čit]]hasai om 174 km päivlaskmha orhal, 216 km avtotedme vai 248 km raudtel. Lähembaižed lidnad oma [[Nerčinsk]] 40 km päivnouzmha avtotedme vai 45 km raudtedme i [[Balei]] 52 km suvipäivnouzmha orhal vai 104 km avtotedme.
 
-Mitrofanovo-žilo ({{lang-ru|село Митрофаново}}, 529 rist. vl 2017) mülüb lidnankundha Šilkan ližaks.
+Mitrofanovo-žilo ({{lang-ru|село Митрофаново}}, 529 rist. vl 2017) mülüb lidnankundha Šilkan ližaks. Lidnankundan pind om 353,57 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 947 ristitud, lidnankundan — 14 539 ristitud, rajonan koumandez. Kaikiš suremb lidnan ristitišt oli 16..18 tuh. eläjid vll 1959−1996 (18 200 rist. vl 1992). Vl 2017 kaik 13 313 ristitud elädas lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 947 ristitud, lidnankundan — 14 539 ristitud, rajonan koumandez. Kaikiš suremb lidnan ristitišt oli 16..18 tuh. eläjid vll 1959−1996 (18 200 rist. vl 1992). Vl 2017 kaik 12 784 ristitud elihe lidnas i 13 313 ristitud kaikes lidnankundas.
 
-Šilkan äiprofil'ne licei om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid<ref>[http://sobory.ru/geo/locat/22320 Šilkan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: phh. Pedroi- da Pauloi-apostoloiden jumalanpert' (om saudud vl 1906) i Jumalanmaman «Kazvatuz»-jumalaižen jumalanpert' (saudihe vll 2008−2014).
+
+Šilkan äiprofil'ne licei<ref>[http://pu-shilka.profiedu.ru/ Šilkan äiprofil'žen licein sait (''pu-shilka.profiedu.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник землякам, павшим в годы Гражданской и В. О. В. Площадь Мира, Шилка, Шилкинский район, Забайкальский край.jpg|Muštnik sijaližile eläjile — sodoiden ühtnijoile (2020)
+Церковь Святых Апостолов Петра и Павла в г. Шилка (Забайкальский край).jpg|Phh. Pedroi- da Pauloi-apostoloiden jumalanpert', vn 2016 nägu
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://шилкинское.рф/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''шилкинское.рф'').] {{ref-ru}}
