--- a/Sretensk.mw
+++ b/Sretensk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Sretensk<br />Сретенск
- | Lidnanznam = 
+ | Lidnanznam = Coat of Arms of Sretenskoe (Zabaykalskiy kray) (2011).png
  | Flag = Flag of Sretensk (Zabaykalsky Krai).png
- | Lidnanznam text = 
+ | Lidnanznam text = Sretenskan lidnanznam
  | Flag text = Sretenskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 6,643
- | Voz' = 2017
+ | Eläjiden lugu = 6,353
+ | Voz' = 2021
  | Pind = 
- | Fail = 
- | Pämez' = Roman Bogdanov (2014—)
+ | Fail = Дом братьев Замошниковых, улица Партизанская, 40, Сретенск, Сретенский район, Забайкальский край.jpg
+ | Pämez' = Roman Bogdanov<br />(2014—)
  | Telefonkod = +7-30246-xx-xxx
  | Avtokod = 75. 80
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
@@ -17,7 +17,9 @@
 '''Sretensk''' ({{lang-ru|Сретенск}}) om [[Venäma]]n lidn da lidnankund [[Baikalantagaine rand|Baikalantagaižen randan]] keskuzpalan pohjoižpäivnouzmas. Se om [[Sretenskan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1689 kuti ''Stretenskii varmitez'' ({{lang-ru|Стретенский острог}}), sid' oli tetab kuti ''Stretensk'' — kaivuzžilo, kozakoiden stanic. Vhesai 1912 Sretenskan raudtestancii oli [[Transsib]]an lopstancijaks, edemba kormazihe jüguid jogilaivoihe da toihe [[Amur (jogi)|Amuradme]]. Vl 1926 Sretensk sai lidnan statusad da kändihe rajonan keskuseks. Lidn šingotase laivansauvomižen tegimel (pened jogilaivad, meblin tehmine). Raudtestancii om Transsiban 50-kilometrižen sarakon lopstancii Kueng-stancijaspäi.
+Eländpunktan aluz om pandud vl 1689 kuti ''Stretenskii varmitez'' ({{lang-ru|Стретенский острог}}), sid' oli tetab kuti ''Stretensk'' — kaivuzžilo, kozakoiden stanic. Vhesai 1912 Sretenskan raudtestancii oli [[Transsib]]an lopstancijaks, edemba kormazihe jüguid jogilaivoihe da toihe [[Amur (jogi)|Amuradme]]. Vl 1926 Sretensk sai lidnan statusad da kändihe rajonan keskuseks.
+
+Sretensk šingotase laivansauvomižen tegimel (pened jogilaivad, meblin tehmine). Raudtestancii om Transsiban 50-kilometrižen sarakon lopstancii Kueng-stancijaspäi.
 
 == Geografijan andmused ==
 Lidn sijadase [[Šilk (jogi)|Šilk-jogen]] molembil randoil, 490 m ü.m.t. keskmäižel korktusel. Matkad [[Čit]]hasai om 365 km päivlaskmha. Lähembaine lidn om [[Nerčinsk]] 100 km päivlaskmha.
@@ -27,7 +29,20 @@ Klimat om terav kontinentaline mussonižpirdoidenke. Voden keskmäine lämuz —
 Morgul-külä (44 rist. vl 2017) mülüb lidnankundha Sretenskan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 6 850 ristitud, lidnankundan — 6 895 ristitud, rajonan koume kümnendest. Kaikiš suremb lidnan ristitišt oli vl 1959 — 15 138 eläjad.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 6 850 ristitud, lidnankundan — 6 895 ristitud, rajonan koume kümnendest. Kaikiš suremb lidnan ristitišt oli 15 138 eläjad vl 1959.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] üks'jäine radai ph. Jurgii-vägestusenkandajan jumalanpert'<ref>[http://sobory.ru/geo/locat/22357 Sretenskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (saudihe vl 1890) om kaičenus lidnas videspäi, Mikoi-arhangelan jumalanpertin sauvuz kävutase toižin.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Банк взаимного кредита, улица Кочеткова, 6, Сретенск, Сретенский район, Забайкальский край.jpg|Sretenskan rajonan tobmuden sauvuz (2021, ende bank)
+Дом Эдельштейна, улица Кочеткова, 8, Сретенск, Сретенский район, Забайкальский край.jpg|Sretenskan rajonan tobmuden toine sauvuz (2021, ende Edel'šteinan pert')
+Усадьба Шустова, улица Кочеткова, 4, 4а, Сретенск, Сретенский район, Забайкальский край.jpg|Adivpert' i söndtavaroiden lauk (2021, ende Šustovan usadib)
+Дом жилой, улица Набережная, 1, Сретенск, Сретенский район, Забайкальский край.jpg|Puine eländpert' randirdal (istorine muštnik), vn 2021 nägu
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://сретенскадм.рф/ Lidnankundan tobmuden oficialine sait (''сретенскадм.рф'').] {{ref-ru}}
