--- a/Centillion.mw
+++ b/Centillion.mw
@@ -1,6 +1,6 @@
-'''Centillion''' om [[lugu]]n nimi znamoičendanke 10<sup>303</sup> amerikalaižes sistemas vai 10<SUP>600</SUP> evropalaižes.
+'''Centillion''' om [[lugu]]n nimi znamoičendanke 10<sup>303</sup> amerikaižes sistemas vai 10<sup>600</sup> evropižes (se-žo [[mil'jon]] sadas märpordhas).
 
-Nece lugu om [[naturaline lugu|naturaline]] dai [[palakaz lugu|palakaz]].
+Nece lugu om [[naturaline lugu|naturaline]] dai [[palakaz lugu|palakaz]]. Kävutase [[astronomii|astronomijas]].
 
 == Kacu mugažo ==
 * [[Suriden luguiden nimitused]]
