--- a/Rahman_Zillur.mw
+++ b/Rahman_Zillur.mw
@@ -2,7 +2,14 @@
 | изображение = Zillur Rahman in Neubrandenburg, Germany in 1973.jpg
 | описание изображения = Zillur Rahman [[Noibrandenburg]]as, [[Saksanma]], vn 1973 kezaku
 }}
-'''Zillur Rahman''' ({{lang-bn|জিল্লুর রহমান}}; sünd. [[9. keväz'ku]] [[1929]], [[Bhairab]], [[Britanine Indii]], nüg. [[Bangladeš]] — kol. [[20. keväz'ku]] [[2013]], [[Singapur]]) oli 19. [[Bangladeš]]an prezidentan (12.02.2009-20.03.2013).
+'''Zillur Rahman''' ({{lang-bn|জিল্লুর রহমান}}; sünd. [[9. keväz'ku]] [[1929]], [[Bhairab]], [[Britanine Indii]], nüg. [[Bangladeš]] — kol. [[20. keväz'ku]] [[2013]], [[Singapur]]) oli [[Bangladeš]]an politikanmez', 19. prezident (12.02.2009 — 20.03.2013).
+
+== Biografii ==
+Mez' oli sündnu advokatan kanzha. Sai opendust [[Dakk]]an universitetan istorižel i jurudižel fakul'tetoil.
+
+Vl 1952 Rahman ühtni likundha Bengalijan päzutandas. Vl 1970 politikanmez' oli valitud Pakistanan parlamentha, kudamban palan Bangladeš oli sil aigal. Ühtni Bangladešan ohjastushe tundištuseta. Valdkundan ripmatomuden tedotusen jäl'ghe radoi «Avami-ühtnend»-partijan päsekretarin, Bangladešan parlamentan ühtnii vspäi 1973.
+
+Zillur Rahman jäi üks'jäižen kandidatan vn 2009 valičendoil i oli vahvištadud prezidentan radsijha änetandata.
 
 == Homaičendad ==
 <references/>
