--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,7 +1,7 @@
 [[Fail:Вторжение России на Украину.svg|thumbnail|right|250px|Venäman armijan sodategendoiden Ukrainan territorijas aktualine kart.
 ----
 <font color="red">rusked</font> — territorii Venäman armijan i «LDNR»:an separatistoiden kontrolin al;<br><font color="darkgoldenrod">pakuine</font> — Ukrainan territorii (pro-)venämalaižen kontrolita;<br>''tomarad'' — (pro-)venämalaižen sodavägiden edenendoiden čuraduz;<br>💥 — iškendad Ukrainan eländpunktoihe]]
-'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo Venäman [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud. Aigemba il'mestuiba äiluguižed znamad, miše hogahtuz oleskelda voib; Putin da tobmuz ei tundištanugoi niid todesižikš. 
+'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''', ''Venäman soda Ukrainan vaste'', ''Venäman agressii Ukrainan vaste'' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}; voimusine ''specoperacijan'' peitnimi — ''«Mangustan heituz»'', {{lang-ru|„Бросок мангуста“}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo Venäman [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud. Aigemba il'mestuiba äiluguižed znamad, miše hogahtuz oleskelda voib; Putin da tobmuz ei tundištanugoi niid todesižikš. 
 
 Päiškendad hogahtiba Ukrainan päivnouzmha, pohjoižhe ([[Vaugedvenäma]]n territorijaspäi [[Lukašenko Aleksandr|Aleksandr Lukašenko]]-prezidentan peitpaginan polhe) dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma {{abbr|aniku|якобы|0}} Ukrainan [[demilitarizacii]] i «denacifikacii» vaiše.
 
