--- a/.af.mw
+++ b/.af.mw
@@ -1,5 +1,7 @@
 '''.af''' om [[Afganistan]]an [[DNS|Internet-domen]]. Se om avaitud [[1997. voz'|1997]]-nden voden 16. päiväl redukud.<ref>[http://iana.org/domains/root/db/af.html IANA — .af Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registrirui om Afganistanan sidon ministruz. Vn 2020 elokus .af-domenas oli 5960 nimed.
+
 == Homaičendad ==
 <references />
 
