--- a/.af.mw
+++ b/.af.mw
@@ -3,6 +3,8 @@
 
 Registrirui om Afganistanan telekommunikacijoiden ministruz. Vn 2020 elokus .af-domenas oli 5960 nimed.
 
+Kahtenden tazopindan domenad (2020): gov.af, .com.af, .org.af, .net.af, .edu.af, .tv.af, .media.af. Koumanden tazopindan domennimiden registracii om avaitud röunadusidenke.
+
 == Homaičendad ==
 <references />
 
