--- a/.af.mw
+++ b/.af.mw
@@ -3,7 +3,7 @@
 
 Registrirui om Afganistanan telekommunikacijoiden ministruz. Vn 2020 elokus .af-domenas oli 5960 nimed.
 
-Kahtenden tazopindan domenad (2020): gov.af, .com.af, .org.af, .net.af, .edu.af, .tv.af, .media.af. Koumanden tazopindan domennimiden registracii om avaitud röunadusidenke.
+Kahtenden tazopindan domenad (2020): gov.af, .com.af, .org.af, .net.af, .edu.af, .tv.af, .media.af. Koumanden tazopindan domennimiden registracii om avaitud röunadusidenke kahtenden tazopindan nimehe kacten. Ku domenan tazopind korktemb, ka maksmine registracijas om korktemb, verazmaižed rezidentad makstas enamba. Vl 2020 domennimen bazine arv oli 50 US$ ekvivalentas.
 
 == Homaičendad ==
 <references />
