--- a/Venäma.mw
+++ b/Venäma.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +7
 | Aigvö = [[UTC]]+2..+12
 }}
-'''Venäma''' ([[venän kel'|venäkelel]]: ''Россия'' [rɐˈsʲijə]) vai '''Venälaine Federacii''' (lühetud nimi: '''VF''', {{lang-ru|Российская Федерация}}), molembad nimitused oma oficialižed, om valdkund [[Evrop|Päivnouzmaižes Evropas]] da [[Azii|Pohjoižes Azijas]].
+'''Venäma''' ([[venän kel'|venäkelel]]: ''Россия'' [rɐˈsʲijə]), '''Venälaine Federacii''' (lühetud nimi: '''VF''', {{lang-ru|Российская Федерация}}), molembad nimitused oma oficialižed; mugažo järgeližpaginas — '''[[Venä]]''', om valdkund [[Evrop|Päivnouzmaižes Evropas]] da [[Azii|Pohjoižes Azijas]].
 
 Venäman pälidn da kaikiš suremb lidn om [[Moskv]]. Vl 2017 kaik oli 15 lidnad Venälaižes Federacijas, kudambiden eläjiden lugu oli enamb 1 mln eläjid: [[Moskv]], [[Piter]], [[Novosibirsk]], [[Jekaterinburg]], [[Alauz'lidn|Alanovgorod (Alauz'lidn)]], [[Kazan']], [[Čeläbinsk]], [[Samar]], [[Omsk]], [[Rostov Donal]], [[Uf]], [[Krasnojarsk]], [[Perm']], [[Voronež]], [[Volgograd]].
 
