--- a/Venä.mw
+++ b/Venä.mw
@@ -5,6 +5,8 @@ Päristitišt — [[amuvenälaižed]] (rus'-rahvaz).
 
 [[Kijevan Venä]] (Amuižvenän valdkund) niiš maiš saihe änikoičendhasai 10.-11. voz'sadal. Sen znamoičend Evropas oli luja. Kijevan Venä tegihe ühten rahvahan, kelen da kul'turan formiruindan aluseks. Vl 988 Kijevan ruhtinaz sai [[valatused|valatusid]] [[ortodoksine hristanuskond|päivnouzmaižen hristianižen]] veron mödhe. Jago ruhtinazkundoikš i [[Mongolijan imperii|mongoline]] vägitungend veiba Venän territorijoid alištushe voz'sadoikš. Se azj azoti konsolidacijan processoid, i nügüd'aigan koume päivnouzmslavilaižiden rahvast oma olmas.
 
+Vepsläižiden keskes Venä om mugažo levitadud nimi Venämale.
+
 == Homaičendad ==
 <references />
 
