ekspromt? kal'k "Беларусь"-nimespäi - en tariče kut pänimituz vepsän kelel

--- a/Vaugedvenäma.mw
+++ b/Vaugedvenäma.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +375
 | Aigvö = [[UTC]]+3
 }}
-'''Vaugedvenäma''' ({{lang-be|Беларусь}}, {{lang-ru|Белоруссия}}), täuz' oficialine nimi — '''Vaugedvenäman Tazovaldkund''' ({{lang-be|Рэспубліка Беларусь}} [rɛspublʲika bʲɛlaˈrusʲ], {{lang-ru|Республика Беларусь}}), om mererandatoi [[valdkund]] [[Päivnouzmpol'ne Evrop|Päivnouzmpol'žes Evropas]]. Vaugedvenäman pälidn da kaikiš järedamb lidn om [[Minsk]].
+'''Vaugedvenäma''', vai ''Vaugedvenä'' ({{lang-be|Беларусь}}, {{lang-ru|Белоруссия}}), täuz' oficialine nimi — '''Vaugedvenäman Tazovaldkund''' ({{lang-be|Рэспубліка Беларусь}} [rɛspublʲika bʲɛlaˈrusʲ], {{lang-ru|Республика Беларусь}}), om mererandatoi [[valdkund]] [[Päivnouzmpol'ne Evrop|Päivnouzmpol'žes Evropas]]. Vaugedvenäman pälidn da kaikiš järedamb lidn om [[Minsk]].
 
 Vaugedvenäma om [[Evrazijalaine Ekonomine Ühtištuz|Evrazijalaižen Ekonomižen Ühtištusen]] ühtnijaks.
 
