*Empty MediaWiki Message*

--- a/Saksanma.mw
+++ b/Saksanma.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +49
 | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Saksanma''' vai '''Germanii''' ({{lang-de|Deutschland}}, vepsän transkripcii «Doičland»), täuz' oficialine nimituz — '''Saksanman (Germanijan) Federativine Tazovaldkund''' ([[saksan kel'|saksan kelel]]: ''Bundesrepublik Deutschland''); mugažo järgeližpaginas — '''Nemcanma''', om valdkund [[Evrop]]an päivlaskmas, [[Pohjoižmeri|Pohjoižen]] da [[Baltijan meri|Baltijan]] meriden randištoidenke. Federacijan pälidn da kaikiš suremb lidn om [[Berlin]]. Federaližen ohjastusen ministrusiden da agentusiden pala sijadase vanhas [[Bonn]]-pälidnas.
+'''Saksanma''' vai '''Germanii''' ({{lang-de|Deutschland}}, vepsän transkripcii «Doičland»), täuz' oficialine nimituz — '''Saksanman (Germanijan) Federativine Tazovaldkund''' ([[saksan kel'|saksan kelel]]: ''Bundesrepublik Deutschland''); mugažo järgeližpaginas — ''Nemcanma'', om valdkund [[Evrop]]an päivlaskmas, [[Pohjoižmeri|Pohjoižen]] da [[Baltijan meri|Baltijan]] meriden randištoidenke. Federacijan pälidn da kaikiš suremb lidn om [[Berlin]]. Federaližen ohjastusen ministrusiden da agentusiden pala sijadase vanhas [[Bonn]]-pälidnas.
 
 Ristitišton lugun mödhe valdkund om kaikiš suremb [[Päivlaskmaine Evrop|Päivlaskmaižes Evropas]] da otab 16:nden sijan mail'mas.
 
