--- a/Hilok_(lidn).mw
+++ b/Hilok_(lidn).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Hilokan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 10,724
- | Voz' = 2017
+ | Eläjiden lugu = 10,320
+ | Voz' = 2021
  | Pind = 13
  | Fail = Хилок в апреле. - panoramio.jpg
  | Pämez' = Vladimir Kudrik<br />(tal'vku 2011—)
@@ -18,7 +18,9 @@
 '''Hilok''' ({{lang-ru|Хилок}}) om [[Venäma]]n lidn da lidnankund [[Baikalantagaine rand|Baikalantagaižen randan]] suvipäivlaskmas. Se om [[Hilokan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1895 kuti [[Transsib]]an ''Hilok-raudtestancii'', nimitihe jogen mödhe. Kätihe radnikžiloks vl 1929. Žilo sai lidnan statusad vn 1951 12. päiväl heinkud. Lidn šingotase raudten edheotandoil, vedimdepo i vagonkohenduzdepo ratas.
+Eländpunktan aluz om pandud vl 1895 kuti [[Transsib]]an ''Hilok-raudtestancii'', nimitihe jogen mödhe. Kätihe radnikžiloks vl 1929. Žilo sai lidnan statusad vn 1951 12. päiväl heinkud.
+
+Hilok-lidn šingotase raudten edheotandoil, vedimdepo i vagonkohenduzdepo ratas.
 
 == Geografijan andmused ==
 Lidn sijadase Hilok-jogen muugotil randoil ({{lang-bua|Хёлго мγрэн}}, [[Seleng (jogi)|Selengan]] oiged ližajogi), Jablonovii-mägisel'gan alangištos, 800 m ü.m.t. keskmäižel korktusel. Matkad [[Burätijan Tazovaldkund]]hasai om 20 km pohjoižhe, [[Čit]]hasai om 220 km pohjoižpäivnouzmha orhal, 261 km raudtedme vai 320 km avtotedme. Lähembaine lidn om [[Petrovsk-Zabaikal'skii]] 112 km päivlaskmha orhal vai 152 km avtotedme. «Baikal»-avtote (R-258) om lidnan suviröunaks. Avtote mäneb jogen hural randal, raudte — oiktal randal, nell' avtotesildad ühtenzoitas jogen randoid.
@@ -26,12 +28,24 @@ Lidn sijadase Hilok-jogen muugotil randoil ({{lang-bua|Хёлго мγрэн}}, 
 Kaks' pen't žilod (Žilkin Futor i Sosnovk) mülüdas lidnankundha Hilokan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 539 ristitud, lidnankundan — 11 616 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli 15 855 eläjad vl 1959. Vl 2017 kaik 10 786 ristitud elädas lidnankundas. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Vladimir-ruhtinasen jumalanpert' om pühästadud vl 2005.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 539 ristitud, lidnankundan — 11 616 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli 15 855 eläjad vl 1959. Vl 2017 kaik 10 724 ristitud elihe lidnas i 10 786 ristitud kaikes lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Vladimir-ruhtinasen jumalanpert'<ref>[http://sobory.ru/geo/locat/20984 Hilokan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om letud vspäi 2002 i om pühästadud vl 2005. Ph. Jurgii-vägestusenkandajan časoun' om saudud 1990-nzil vozil.
 
 Professionaline opendusen aluzkund om raudteškol.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник в честь воинов-земляков, погибших в годы В. О. В. Улица Первомайская, Хилок, Хилокский район, Забайкальский край.jpg|Sodamuštnik pölištunuzile [[Sur' soda|Suren sodan]] aigan sijaližile eläjile i ph. Vladimir-ruhtinasen jumalanpert', vn 2014 nägu
+За Хилком в сторону Улан-Удэ - panoramio.jpg|Znam avtotel ani lidnan taga (2010)
+Здание вокзала железнодорожной станции Хилок. Хилок, Хилокский район, Забайкальский край.jpg|Hilok-raudtestancii vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
-* [http://хилок.забайкальскийкрай.рф/gorodskie-i-selskie-poseleniya-hilokskogo-rayona/gorodskoe-poselenie-quothilokskoequot/ Lidnankundan lehtpoled Hilokan rajonan tobmuden aluzkundoiden saital (''хилок.забайкальскийкрай.рф'')] i sen [http://хилок.чита.рф/GPHilokskoe.html vanhal versijal (''хилок.чита.рф'')] {{ref-ru}}
+* [http://хилок-адм.рф/ Lidnankundan tobmuden sait (''хилок-адм.рф'').] {{ref-ru}}
 * [http://www.hilok.ru/ Lidnan informacine sait (''hilok.ru'')] {{ref-ru}}
 {{Commons|Category:Khilok}}
 
