--- a/Petrovsk-Zabaikal'skii.mw
+++ b/Petrovsk-Zabaikal'skii.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Petrovsk-Zabaikal'skijan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 16,524
- | Voz' = 2017
+ | Eläjiden lugu = 15,626
+ | Voz' = 2021
  | Pind = 300
- | Fail = Петровский завод, вокзал - panoramio.jpg
- | Pämez' = Aleksandr Taranov (2009—)
+ | Fail = Памятник декабристам, улица Декабристов, у дома № 19, Петровск-Забайкальский, Забайкальский край.jpg
+ | Pämez' = Igor' Zaripov<br />(reduku 2018—,<br />''Игорь Зарыпов'')
  | Telefonkod = +7-30236-xx-xxx
  | Avtokod = 75. 80
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
@@ -17,7 +17,7 @@
 '''Petrovsk-Zabaikal'skii''' ({{lang-ru|Петровск-Забайкальский}}) om [[Venäma]]n lidn da lidnümbrik [[Baikalantagaine rand|Baikalantagaižen randan]] suvipäivlaskmas. Se om [[Petrovsk-Zabaikal'skijan rajon]]an administrativižeks keskuseks, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1789 kuti ''Petran Tegim'' ({{lang-ru|Петровский Завод}}). Vl 1926 se sai lidnan statusad da oli udesnimitadud nügüdläižikš. Lidnan raudtestancii om olmas vspäi 1900, se om [[Transsib]]an pala i "Petran Tegim"-nimenke tähäsai.
+Eländpunktan aluz om pandud vl 1789 kuti ''Petran Tegim'' ({{lang-ru|Петровский Завод}}). Vl 1926 se sai lidnan statusad da oli udesnimitadud nügüdläižikš. Lidnan raudtestancii om olmas vspäi 1900, se om [[Transsib]]an pala i «Petran Tegim»-nimenke tähäsai.
 
 == Geografijan andmused ==
 Lidn seižub mägidenkeskeižes katl'uses, Baläg- da Mikirt-jogiden kaidoiš alangištoiš ([[Hilok (jogi)|Hilokan]] i [[Seleng (jogi)|Selengan]] oigedpol'ne bassein), 800 m ü.m.t. keskmäižel korktusel. Matkad [[Čit]]hasai om 414 km päivnouzmha raudtedme vai 480 km «Baikal»-avtotedme (R258), [[Burätijan Tazovaldkund]]hasai — 15..20 km lodeheze. Lähembaine lidn om [[Ulan Ude]] 105 km lodeheze orhal vai 200 km avtotedme.
@@ -25,15 +25,31 @@ Lidn seižub mägidenkeskeižes katl'uses, Baläg- da Mikirt-jogiden kaidoiš al
 Petrovsk-Zabaikal'skii om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 549 ristitud. Kaikiš suremb ristitišt oli vozil 1959—1992, 28..30 tuhad eläjid (vl 1979 — 30 945 rist.).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 549 ristitud. Kaikiš suremb ristitišt oli 28..30 tuhad eläjid vozil 1959−1992 (30 945 rist. vl 1979).
+
+Edeline lidnan pämez' om Aleksandr Taranov (2009 — reduku 2018).
 
 == Ižanduz da transport ==
-Ižandusen päsarakod oma mecan ümbriradmine i sömtegimišt, raudmetallurgijan i stöklan tegimed ei ole rados. Professionaližen opendusen aluzkundad: professionaliž-pedagogine tehnikum i medicinine škol.
+Ižandusen päsarakod oma mecan ümbriradmine i sömtegimišt. Raudmetallurgijan i stöklan tegimed ei ole rados.
 
-Maršruttaksid da taksid oma kundaližtransportaks lidnas. Ezilidnelektrojonused ühtenzoittas lidnad Ulan Udenke i [[Hilok (lidn)|Hilok-lidnanke]]. Dekabristad-raudtestancii om toine lidnas, sijadase 6 kilometras päraudtestancijaspäi Čitan polehe.
+Professionaližen opendusen aluzkundad: Čitan politehnižen kolledžan filial<ref>[http://chptk.ru/index/petrovsk/0-103 Petrovsk-Zabaikal'skii-lidnan filialan lehtpoled Čitan politehnižen kolledžan ''chptk.ru''-saital.] {{ref-ru}}</ref> (edel 2016. vot professionaliž-pedagogine tehnikum) i Čitan medicinižen kolledžan filial<ref>[http://chmk-chita.ru/filialy/petrovsk-zabajkalskij-filial/ Petrovsk-Zabaikal'skii-lidnan filialan lehtpoled Čitan medicinižen kolledžan ''chmk-chita.ru''-saital.] {{ref-ru}}</ref> (ende medicinine škol-tehnikum).
+
+Maršruttaksid da taksid oma kundaližtransportaks lidnas. Ezilidnelektrojonused ühtenzoittas lidnad Ulan Udenke i [[Hilok (lidn)|Hilok-lidnanke]]. ''Dekabristad''-raudtestancii ({{lang-ru|Декабристы}}) om toine lidnas, sijadase kudes kilometras päraudtestancijaspäi Čitan polehe.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Petrowsk-Sabaikalski.jpg|Raudmetallurgijan tegimen sauvusiden nägu vl 2016
+Некрополь декабристов, кладбище, Петровск-Забайкальский, Забайкальский край.jpg|Dekabristoiden nekropol' kaumžomal (2014)
+ВЛ80Р-1605А-1668.jpg|VL80R-serijan elektrovedim ''Petran Tegim''-raudtestancijal vl 2009
+Мемориальный портал в честь декабристов, железнодорожный вокзал, Петровск-Забайкальский, Забайкальский край.jpg|Memorialine portal dekabristoiden muštoks ''Petran Tegim''-päraudtestancijal (2014)
+Петровский завод, вокзал - panoramio.jpg|''Petran Tegim''-raudtestancijan päsauvuz vl 2008
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://петзаб.забайкальскийкрай.рф/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''петзаб.забайкальскийкрай.рф'') Baikalantagaižen randan portalal.] {{ref-ru}}
+* [http://petzab.75.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''petzab.75.ru'') Baikalantagaižen randan portalal] i sen [http://петзаб.забайкальскийкрай.рф vanh versii]. {{ref-ru}}
 {{Commons|Category:Petrovsk-Zabaikalsky}}
 
 {{Baikalantagaižen randan lidnad}}
