--- a/Mad'jaran_Vikipedii.mw
+++ b/Mad'jaran_Vikipedii.mw
@@ -13,6 +13,7 @@ Nügüdläine kirjutusiden lugu om {{NUMBEROF|ARTICLES|hu}} (vn {{CURRENTYEAR}} 
 * 2011, 10. sügüz'ku — 200 000 südäimištlehtpolid
 * 2015, 7. semendku — 300 000 südäimištlehtpolid
 * 2016, 15. tal'vku — 400 000 südäimištlehtpolid
+* 2022, 16. uhoku — 500 000 südäimištlehtpolid
 
 == Homaičendad ==
 <references />
