--- a/Pohjoine_LEK_(Piter).mw
+++ b/Pohjoine_LEK_(Piter).mw
@@ -1,9 +1,11 @@
-[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi.]]
-'''Pohjoine LEK''' ({{lang-ru|Северная ТЭЦ}}) om [[lämuzelektrokeskuz]] Leningradan agjan [[Vsevoložskan rajon]]as. Varatoitab lämudel [[Piter]]in i Leningradan agjan lähižid rajonid, tehleb [[elektruz|elektrust]].
+[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi]]
+'''Pohjoine LEK''' ({{lang-ru|Северная ТЭЦ}}) om [[lämuzelektrokeskuz]] Leningradan agjan [[Vsevoložskan rajon]]as. Mülüb TGK-1-kompanijha.
+
+Edheotand varatoitab lämudel [[Piter]]in i Leningradan agjan lähižid rajonid, tehleb [[elektruz|elektrust]].
 
 LEK:an sauvond oli zavodinus vl [[1970]]. Voden [[1975]] [[27. eloku|27. päiväl]] elokud avaitihe ezmäižen energoblokan radod. Radab [[londuseline gaz|londuseližel gazal]].
 
-Elektrovägevuz — 500 MVt. Lämuzvägevuz — 1188 Gkal/čas.
+Elektrovägevuz — 500 MVt, kaik om viž energoblokad 100 MVt vägevudenke. Lämuzvägevuz — 1188 Gkal/čas. Se om Leningradan agjan kahtenz' elektrostancii vägevuden mödhe [[Kirišin GRES|Kirišin GRES:an]] (2595 MVt) jäl'ghe. Savutorved oma 180 metrad kortte.
 
 {{Commons|Category:North CHP power station}}
 
@@ -11,3 +13,4 @@ Elektrovägevuz — 500 MVt. Lämuzvägevuz — 1188 Gkal/čas.
 [[Kategorii:Vsevoložskan rajon]]
 [[Kategorii:Elektrostancijad kirjamišton mödhe]]
 [[Kategorii:Piter]]
+[[Kategorii:Leningradan agjan ižanduz]]
