--- a/Pohjoine_LEK_(Piter).mw
+++ b/Pohjoine_LEK_(Piter).mw
@@ -1,4 +1,4 @@
-[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi]]
+[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi (nüg. [[Murino]]-lidnan pala)]]
 '''Pohjoine LEK''' ({{lang-ru|Северная ТЭЦ}}) om [[lämuzelektrokeskuz]] Leningradan agjan [[Vsevoložskan rajon]]as. Mülüb TGK-1-kompanijha.
 
 Edheotand varatoitab lämudel [[Piter]]in i Leningradan agjan lähižid rajonid, tehleb [[elektruz|elektrust]].
@@ -7,6 +7,8 @@ LEK:an sauvond oli zavodinus vl [[1970]]. Voden [[1975]] [[27. eloku|27. päivä
 
 Elektrovägevuz — 500 MVt, kaik om viž energoblokad 100 MVt vägevudenke. Lämuzvägevuz — 1188 Gkal/čas. Se om Leningradan agjan kahtenz' elektrostancii vägevuden mödhe [[Kirišin GRES|Kirišin GRES:an]] (2595 MVt) jäl'ghe. Savutorved oma 180 metrad kortte.
 
+== Irdkosketused ==
+* [http://tgk1.ru/ Pohjoižen LEK:an lehtpol' ''tgk1.ru''-saital.] {{ref-ru}}
 {{Commons|Category:North CHP power station}}
 
 {{stub}}
