--- a/Pohjoine_LEK_(Piter).mw
+++ b/Pohjoine_LEK_(Piter).mw
@@ -8,7 +8,7 @@ LEK:an sauvond oli zavodinus vl [[1970]]. Voden [[1975]] [[27. eloku|27. päivä
 Elektrovägevuz — 500 MVt, kaik om viž energoblokad 100 MVt vägevudenke. Lämuzvägevuz — 1188 Gkal/čas. Se om Leningradan agjan kahtenz' elektrostancii vägevuden mödhe [[Kirišin GRES|Kirišin GRES:an]] (2595 MVt) jäl'ghe. Savutorved oma 180 metrad kortte.
 
 == Irdkosketused ==
-* [http://tgk1.ru/ Pohjoižen LEK:an lehtpol' ''tgk1.ru''-saital.] {{ref-ru}}
+* [http://www.tgc1.ru/production/complex/spb-branch/severnaya-chpp/ Pohjoižen LEK:an lehtpol' ''tgc1.ru''-saital.] {{ref-ru}}
 {{Commons|Category:North CHP power station}}
 
 {{stub}}
