*Empty MediaWiki Message*

--- a/Pohjoine_LEK_(Piter).mw
+++ b/Pohjoine_LEK_(Piter).mw
@@ -1,4 +1,4 @@
-[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi (nüg. [[Murino]]-lidnan pala)]]
+[[Fail:North CHP power station (Saint Petersburg).jpg|thumb|right|250px|Nägu Pohjoižhe LEK-he [[Medvežii Stan]]-žilospäi vl 2010 (nüg. [[Murino]]-lidnan pala)]]
 '''Pohjoine LEK''' ({{lang-ru|Северная ТЭЦ}}) om [[lämuzelektrokeskuz]] Leningradan agjan [[Vsevoložskan rajon]]as. Mülüb TGK-1-kompanijha.
 
 Edheotand varatoitab lämudel [[Piter]]in i Leningradan agjan lähižid rajonid, tehleb [[elektruz|elektrust]].
