--- a/Riz_Keisi.mw
+++ b/Riz_Keisi.mw
@@ -1,7 +1,11 @@
 {{Personalii}}
-'''C.E.B. Reas''', todesine nimi — '''Keisi Ries''' ({{lang-en|Casey Reas}}; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikalaine]] pirdai-kuvatai da kompjuterine dizainer.
+'''C.E.B. Reas''', todesine nimi — '''Keisi Ries''' ({{lang-en|Casey Reas}}; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikalaine]] pirdai-kuvatai da [[kompjuterine dizain]]er.
 
-Kaikžuses, hän radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. „[[Transmediale]]“-festivalin üks' ühtnijoišpäi.
+Kaikžuses, hän radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
+
+== Kirjad ==
+* Casey Reas and Benjamin Fry, ''Processing: A Programming Handbook for Visual Designers and Artists'' (Processing: programiruindan ičtazopenduzkirj vizualižiden dizaineroiden da artistoiden täht), MIT Press, 2007.
+* Casey Reas, ''Process compendium 2004−2010'', REAS Studio, 2010. ISBN 978-1-4507-2713-6
 
 == Homaičendad ==
 <references/>
