--- a/Riz_Keisi.mw
+++ b/Riz_Keisi.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-'''C.E.B. Reas''', todesine nimi — '''Keisi Ries''' ({{lang-en|Casey Reas}}; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikalaine]] pirdai-kuvatai da [[kompjuterine dizain]]er.
+'''Keisi Edvin Barker Ries''' ({{lang-en|Casey Edwin Barker Reas}}, lüh. ''Casey Reas'' i ''C.E.B. Reas''; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikaine]] pirdai-kuvatai da [[kompjuterine dizain]]er. Sädi programiruindan [[Processing (programiruindan kel')|Processing]]-kel't [[Ben Frai]]n ühtes vl 2001.
 
 Kaikžuses, hän radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
 
