--- a/Riz_Keisi.mw
+++ b/Riz_Keisi.mw
@@ -1,11 +1,11 @@
 {{Personalii}}
-'''Keisi Edvin Barker Ries''' ({{lang-en|Casey Edwin Barker Reas}}, lüh. ''Casey Reas'' i ''C.E.B. Reas''; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikaine]] pirdai-kuvatai da [[kompjuterine dizain]]er. Sädi programiruindan [[Processing (programiruindan kel')|Processing]]-kel't [[Ben Frai]]n ühtes vl 2001.
+'''Keisi Edvin Barker Riz''' ({{lang-en|Casey Edwin Barker Reas}}, lüh. ''Casey Reas'' i ''C.E.B. Reas''; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikaine]] pirdai-kuvatai da [[kompjuterine dizain]]er. Sädi programiruindan [[Processing (programiruindan kel')|Processing]]-kel't [[Bendžamin Frai|Ben Frain]] ühtes vl 2001.
 
-Kaikžuses, hän radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
+Kaikžuses, Riz radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
 
 == Kirjad ==
-* Casey Reas and Benjamin Fry, ''Processing: A Programming Handbook for Visual Designers and Artists'' (Processing: programiruindan ičtazopenduzkirj vizualižiden dizaineroiden da artistoiden täht), MIT Press, 2007.
-* Casey Reas, ''Process compendium 2004−2010'', REAS Studio, 2010. ISBN 978-1-4507-2713-6
+* Casey Reas and Benjamin Fry, ''Processing: A Programming Handbook for Visual Designers and Artists'' (Processing: programiruindan ičtazopenduzkirj vizualižiden dizaineroiden da artistoiden täht), MIT Press, 2007. {{ref-en}}
+* Casey Reas, ''Process compendium 2004−2010'', REAS Studio, 2010. {{ref-en}} ISBN 978-1-4507-2713-6
 
 == Homaičendad ==
 <references/>
