*Empty MediaWiki Message*

--- a/Riz_Keisi.mw
+++ b/Riz_Keisi.mw
@@ -1,7 +1,7 @@
 {{Personalii}}
 '''Keisi Edvin Barker Riz''' ({{lang-en|Casey Edwin Barker Reas}}, lüh. ''Casey Reas'' i ''C.E.B. Reas''; sünd. 1972 Troi-lidnha, [[Ogajo]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]), om [[AÜV|amerikaine]] pirdai-kuvatai da [[kompjuterine dizain]]er. Sädi programiruindan [[Processing (programiruindan kel')|Processing]]-kel't [[Bendžamin Frai|Ben Frain]] ühtes vl 2001.
 
-Kaikžuses, Riz radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
+Sen paloin, Riz radoi [[Uitnin amerikaižen čomamahton muzei|Uitnin amerikaižen čomamahton muzejan]], [[Ars Electronica]]-, [[ZKM]]-sauvusiden nägutesel. «[[Transmediale]]»-festivalin üks' ühtnijoišpäi.
 
 == Kirjad ==
 * Casey Reas and Benjamin Fry, ''Processing: A Programming Handbook for Visual Designers and Artists'' (Processing: programiruindan ičtazopenduzkirj vizualižiden dizaineroiden da artistoiden täht), MIT Press, 2007. {{ref-en}}
